Fix overflow when replying to a message
show an alertbox after deletion of message instead of empty area

[delivers #164595947]

--- a/UI/css/user.css
+++ b/UI/css/user.css
@@ -111,6 +111,9 @@ td, th {
 
 #area {
     display:none;
+    height: 80vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .messo {
